--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "natours",
+  "name": "basic-api-master",
   "version": "1.0.0",
   "description": "Learning node, express and mongoDB",
   "main": "app.js",
@@ -10,7 +10,7 @@
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
-  "author": "Jonas Schmedtmann",
+  "author": "Alberto Dgedge",
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
